apps/trackmania/templates/deployment-evosc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evosc
  labels:
    app: evosc
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: evosc
  template:
    metadata:
      labels:
        app: evosc
    spec:
      containers:
        - name: evosc
          image: evotm/evosc:latest
          command: ["/bin/sh", "-c"]
          args: 
          # - "touch /controller/config/default/evosc.config.json && php esc run"
          # first run: then do php esc run manually
          - "touch /controller/config/default/evosc.config.json && sleep infinity"
