apps/trackmania/templates/deployment-trackmania.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trackmania
  labels:
    app: trackmania
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: trackmania
  template:
    metadata:
      labels:
        app: trackmania
    spec:
      containers:
        - name: trackmania
          image: evotm/trackmania:latest
          livenessProbe:
            exec:
              command:
                - nc -z -v 127.0.0.1 5000 || exit 1
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
