apps/trackmania/templates/service-trackmania.yaml
apiVersion: v1
kind: Service
metadata:
  name: trackmania
  namespace: trackmania
spec:
  ports:
    - name: 2350-udp
      port: 2350
      protocol: UDP
      targetPort: 2350
    - name: 2350-tcp
      port: 2350
      targetPort: 2350
    - name: 5000-tcp
      port: 5000
      targetPort: 5000
  selector:
    app: trackmania
